--- a/package.json
+++ b/package.json
@@ -7,24 +7,36 @@
     "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:prod": "set NODE_ENV=production&&nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js --watch",
+    "build": "esbuild ./public/js/index.js --bundle --outfile=./public/js/bundle.js"
   },
   "author": "ThaoTTp",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
+    "esbuild": "0.19.7",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.21",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
+    "nodemailer-brevo-transport": "^2.1.0",
     "nodemon": "^3.0.1",
+    "pug": "^3.0.2",
+    "sharp": "^0.32.6",
     "slugify": "^1.6.6",
+    "stripe": "^14.5.0",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   }
